--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/dlehdanakf/kung-kakao-plusfriend#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "eslint": "^4.18.0",
     "express": "^4.16.2"
   }
