--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "eslint": "^4.18.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "moment": "^2.20.1"
   }
 }
