--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
   "homepage": "https://github.com/dlehdanakf/kung-kakao-plusfriend#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "dotenv": "^5.0.0",
+    "es5-async-await": "^1.0.0",
     "eslint": "^4.18.0",
     "express": "^4.16.2",
-    "moment": "^2.20.1"
+    "moment": "^2.20.1",
+    "rss-parser": "^3.1.1",
+    "unescape": "^1.0.1"
   }
 }
