--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "es5-async-await": "^1.0.0",
     "eslint": "^4.18.0",
     "express": "^4.16.2",
+    "form-data": "^2.3.2",
     "moment": "^2.20.1",
+    "node-fetch": "^1.7.3",
     "rss-parser": "^3.1.1",
     "unescape": "^1.0.1"
   }
