--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^4.18.0",
     "express": "^4.16.2",
     "form-data": "^2.3.2",
+    "image-size": "^0.6.2",
     "moment": "^2.20.1",
     "node-fetch": "^1.7.3",
     "rss-parser": "^3.1.1",
